[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "yarn-dev-tools"
version = "1.0.0"
description = ""
authors = ["Szilard Nemeth <szilard.nemeth88@gmail.com>"]
keywords = ["YARN", "development", "dev environment"]
readme = "README.md"
homepage = "https://github.com/szilard-nemeth/yarn-dev-tools"
repository = "https://github.com/szilard-nemeth/yarn-dev-tools"
packages = [{include = "yarndevtools"}]
include = [
"LICENSE"
]

# TODO Verify if this is required
[tool.setuptools.package-data]
yarndevtools = ["cdsw/unit-test-result-aggregator/*.txt", "cdsw/scripts/*.sh"]


[tool.poetry.dependencies]
python = "^3.8"
python-common-lib = "1.0.2"
google-api-wrapper2 = "1.0.2"
gitpython = "*"
humanize = "*"
bs4 = "*"
jira = "*"
dataclasses-json = "*"
dacite = "*"
#setuptools~=54.1.2

# TODO Sort out dev dependencies, should not be an overlap between prod vs. dev
# TODO Turn back on dev dependencies for python-common-lib + google-api-wrapper2
[tool.poetry.group.dev.dependencies]
#python-common-lib = { git = "https://github.com/szilard-nemeth/python-commons.git" }
#google-api-wrapper2 = { git = "https://github.com/szilard-nemeth/google-api-wrapper.git" }
flake8 = "*"
pytest = "^3.6"
pytest-cov = "*"
#setuptools = "*"
pre-commit = "*"
bs4 = "~0.0.1"
coolname = "*"
httpretty = "*"
jira = "*"
dataclasses-json = "*"
dacite = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
exec-yarndevtools = "yarndevtools.yarn_dev_tools:run"